--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.11.1
-Django==6.0.2
-django-debug-toolbar==6.2.0
+# django-debug-toolbar==4.2.28
+Django==4.2.28
 psycopg2-binary==2.9.11
+asgiref==3.11.1
+pillow==11.3.0
 sqlparse==0.5.5
+tabulate==0.9.0
+typing_extensions==4.15.0
